# snap2text

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  apihelper.cc  apihelper.h  appintegrity.cc  appintegrity.h  areacapturewindow.cc  areacapturewindow.h  curlreader.cc  curlreader.h  document.cc  document.h  drawingarea.cc  drawingarea.h  drawingareawindow.cc  drawingareawindow.h  globals.cc  globals.h  googletranslator.cc  googletranslator.h  gridmodel.h  languagehelper.cc  languagehelper.h  main.cc  menuappwindow.cc  menuappwindow.h  snap2text.desktop
db-scripts/: tb_document.sql  tb_session.sql
static/: #ui-window.glade#  app_icon.xcf  style.css  ui-window.glade  ui-window.glade~
static/data/: db_snap2text.db
static/language/: en.json  pt-br.json
